fix incopatible method for Helios JDK